добавлены все методы в сваггер, а так же поправлен код авторизации
