# src/main/kotlin/ru/shalkoff/bus_schedule/db/models/UserModel.kt
@@ -9,6 +9,14 @@ data class UserModel(
     val role: UserRole
 )
 
+data class UserModelResponse(
+    val id: Int,
+    val login: String,
+    val fullName: String,
+    val email: String,
+    val role: UserRole
+)
+
 enum class UserRole(val roleStr: String) {
     ADMIN("ADMIN"),
     MODERATOR("MODERATOR"),
@@ -18,6 +26,16 @@ enum class UserRole(val roleStr: String) {
 
         fun getByName(roleStr: String): UserRole {
             return UserRole.values().firstOrNull { it.roleStr == roleStr } ?: USER
+        }
+
+        fun UserModel.mapToResponse(): UserModelResponse {
+            return UserModelResponse(
+                this.id,
+                this.login,
+                this.fullName,
+                this.email,
+                this.role
+            )
         }
     }
 }
